# api-examples

./: .gitmodules  README.md  openapi_baseline.json
misc/: README.md  run_recovery.bat
misc/encrypt-decrypt-utility/: README.md  main.py  pyproject.toml
misc/yubikey-backup/: run_recovery.sh
python/: fordefi_protocol_types.py
python/address-book/: README.md  add-batch.py  add-contact.py  pyproject.toml  sign_payload.py
python/agent-cli/: SKILL.md  fordefi-workspace.json  requirements.txt  setup.py
python/bitcoin-psbt/: README.md  (+13 more)
python/cosigner/: .env.example  README.md  cosigner.py  pyproject.toml
python/cosigner/fordefi/: __init__.py  api.py  config.py  signature.py
python/cosigner/rules/: __init__.py  base.py  calldata.py  calldata_contains_vault.py  cctp_bridge_recipient.py  eip712_receiver.py  oneinch_swap_receiver.py
python/cosigner/tests/: test_rules.py
python/cosigner/tests/fixtures/: transaction_contract_call.json
python/defi-integrations/lighter/: README.md  main.py  pyproject.toml  sign_onboarding_message.py  system_setup.py  tx_builder.py
python/defi-integrations/lighter/utils/: broadcast.py  sign_payload.py
python/message-signing/: README.md  pyproject.toml
python/message-signing/evm/: construct_request.py  sign_eip712.py  sign_personal_message.py
python/message-signing/shared/: api_client.py
python/message-signing/solana/: construct_request.py  sign_personal_message.py
python/message-signing/starknet/: construct_request.py  sign_typed_message.py
python/message-signing/tron/: construct_request.py  sign_personal_message.py
(+667 files in other folders)
