[project]
name = "fordefi-cosigner"
version = "0.1.0"
description = "Fordefi CoSigner example: programmatic transaction validation that augments Fordefi Policy rules"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ecdsa>=0.19.1",
    "eth-abi>=5.0.1",
    "fastapi>=0.119.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "eth-hash[pycryptodome]>=0.7",
    "pytest>=8",
]
