[project]
name = "lighter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ecdsa>=0.19.1",
    "lighter-sdk",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
lighter-sdk = { git = "https://github.com/elliottech/lighter-python.git" }
